--- a/web_1_myweb/about/index.html
+++ b/web_1_myweb/about/index.html
@@ -1,1 +1,139 @@
-about
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/bootstrap-5.2.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles.css">
+    <title>About Page</title>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+        <div class="container">
+            <a class="navbar-brand" href="/">My Web 1</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/myresearch">Research</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/ct519">CT519</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/Jakkapan-a/ct519-final-exam" target="_blank">Github</a>
+                        </li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home section">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6 d-flex justify-content-center flex-column align-items-start p-5">
+                    <h1>Web 1 - About</h1>
+                    <p>My name is Jakkapan Attala</p>
+                    <p>ID: 66130030</p>
+                    <p>I am a web developer and I am also studying at Dhurakij Pundit University.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <h2>Skills</h2>
+                    <p align="left"> 
+                        <a href="https://www.arduino.cc/" target="_blank" rel="noreferrer"> 
+                            <img src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg" alt="arduino" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" width="40" height="40"/> 
+                        </a> 
+                            <a href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> 
+                            <img src="https://cdn.worldvectorlogo.com/logos/c--4.svg" alt="c#" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://git-scm.com/" target="_blank" rel="noreferrer"> 
+                            <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/> 
+                        </a>
+                        <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg" alt="javascript" width="40" height="40"/> 
+                        </a> 
+                        <!-- typescript -->
+                        <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg" alt="typescript" width="40" height="40"/>
+                        </a>
+                        <a href="https://www.mysql.com/" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg" alt="mysql" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://www.php.net" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg" alt="php" width="40" height="40"/> 
+                        </a> 
+                        <a href="https://www.python.org" target="_blank" rel="noreferrer"> 
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="40" height="40"/> 
+                        </a> 
+                        <!-- Docker -->
+                        <a href="https://www.docker.com/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="40" height="40"/>
+                        </a>
+                        <!-- Linux -->
+                        <a href="https://www.linux.org/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/>
+                        </a>
+                        <!-- Debian -->
+                        <a href="https://www.debian.org/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/debian/debian-original-wordmark.svg" alt="debian" width="40" height="40"/>
+                        </a>
+                        <!-- Ubuntu -->
+                        <a href="https://ubuntu.com/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/ubuntu/ubuntu-plain-wordmark.svg" alt="ubuntu" width="40" height="40"/>
+                        </a>
+                        <!-- Raspberry Pi -->
+                        <a href="https://www.raspberrypi.org/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/raspberrypi/raspberrypi-original.svg" alt="raspberrypi" width="40" height="40"/>
+                        </a>
+                        <!-- Visual Studio Code -->
+                        <a href="https://code.visualstudio.com/" target="_blank" rel="noreferrer">
+                            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original-wordmark.svg" alt="vscode" width="40" height="40"/>
+                        </a>   
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>&copy; 2024 My Personal Website. All Rights Reserved.</p>
+            </div>
+        </div>
+        </div>
+    </footer>
+    <script src="/bootstrap-5.2.3/js/bootstrap.min.js"></script>
+</body>
+
+</html>
